--- a/install.txt
+++ b/install.txt
@@ -925,3 +925,60 @@ TCP
 nc -vz <服务器IP> <端口号>
 
 nc -z -v -u <服务器IP> 123
+
+
+----
+
+
+more /etc/chrony.conf
+# Use public servers from the pool.ntp.org project.
+# Please consider joining the pool (http://www.pool.ntp.org/join.html).
+#pool 2.rhel.pool.ntp.org iburst
+#server cdchkt91 iburst
+#server cdchkt92 iburst
+server hktsrvprd41a iburst
+server hktsrvprd51a iburst
+
+# Limit network interface used for chronyd
+bindcmdaddress 127.0.0.1
+
+# Record the rate at which the system clock gains/losses time.
+driftfile /var/lib/chrony/drift
+
+# Allow the system clock to be stepped in the first three updates
+# if its offset is larger than 1 second.
+makestep 1.0 3
+
+# Enable kernel synchronization of the real-time clock (RTC).
+rtcsync
+
+# Enable hardware timestamping on all interfaces that support it.
+#hwtimestamp *
+
+# Increase the minimum number of selectable sources required to adjust
+# the system clock.
+#minsources 2
+
+# Allow NTP client access from local network.
+#allow 192.168.0.0/16
+
+# Serve time even if not synchronized to a time source.
+#local stratum 10
+
+# Specify file containing keys for NTP authentication.
+keyfile /etc/chrony.keys
+
+# Get TAI-UTC offset and leap seconds from the system tz database.
+leapsectz right/UTC
+
+# slewing on leap second
+leapsecmode slew
+
+# Specify directory for log files.
+logdir /var/log/chrony
+
+#rtcfile /var/lib/chrony/rtc
+
+# Select which information is logged.
+#log measurements statistics tracking
+log measurements statistics tracking rtc refclocks tempcomp
