--- a/install.txt
+++ b/install.txt
@@ -1055,3 +1055,100 @@ YAML
 温馨提示： 修改 NTP 配置后一定要重启 chronyd 服务才能生效，上面的示例中都已经包含了重启服务的步骤。
 
 你想了解如何通过变量（Variables）来动态设置这些 IP 地址吗？
+
+
+--------------
+
+[logreader@poxappprd51c ~]$ more /etc/sysctl.conf
+# sysctl settings are defined through files in
+# /usr/lib/sysctl.d/, /run/sysctl.d/, and /etc/sysctl.d/.
+#
+# Vendors settings live in /usr/lib/sysctl.d/.
+# To override a whole file, create a new file with the same in
+# /etc/sysctl.d/ and put new settings there. To override
+# only specific settings, add a file with a lexically later
+# name in /etc/sysctl.d/ and put new settings there.
+#
+# For more information, see sysctl.conf(5) and sysctl.d(5).
+
+# Controls the System Request debugging functionality of the kernel
+kernel.sysrq = 1
+
+# Controls IP packet forwarding
+net.ipv4.ip_forward = 0
+
+# Do not accept source routing
+net.ipv4.conf.default.accept_source_route = 0
+
+# Local port range
+net.ipv4.ip_local_port_range = 1024 65535
+
+# Do not accept redirect packets
+net.ipv4.conf.all.accept_redirects = 0
+net.ipv4.conf.default.accept_redirects = 0
+net.ipv4.conf.all.secure_redirects = 0
+net.ipv4.conf.default.secure_redirects = 0
+
+net.ipv4.icmp_echo_ignore_all = 0
+# Accept asymmetrically routed (outgoing routes and incoming routes are different) packets
+net.ipv4.conf.all.rp_filter = 1
+net.ipv4.conf.default.rp_filter = 1
+### Increase Process Identifiers Limit (PID) ###
+kernel.pid_max=65536
+
+# The minimum number of kilobytes to keep free across the system and this value is used to compute a watermark value for each low memory zone
+vm.min_free_kbytes = 1048576
+
+
+
+fs.file-max = 1000000
+net.ipv4.tcp_max_tw_buckets = 2000000
+
+
+
+
+----
+
+PROD[root@poxappprd52e ~]$ more /etc/sysctl.conf
+# sysctl settings are defined through files in
+# /usr/lib/sysctl.d/, /run/sysctl.d/, and /etc/sysctl.d/.
+#
+# Vendors settings live in /usr/lib/sysctl.d/.
+# To override a whole file, create a new file with the same in
+# /etc/sysctl.d/ and put new settings there. To override
+# only specific settings, add a file with a lexically later
+# name in /etc/sysctl.d/ and put new settings there.
+#
+# For more information, see sysctl.conf(5) and sysctl.d(5).
+
+# Controls the System Request debugging functionality of the kernel
+kernel.sysrq = 1
+
+# Controls IP packet forwarding
+net.ipv4.ip_forward = 0
+
+# Do not accept source routing
+net.ipv4.conf.default.accept_source_route = 0
+
+# Local port range
+net.ipv4.ip_local_port_range = 50000 65535
+
+# Do not accept redirect packets
+net.ipv4.conf.all.accept_redirects = 0
+net.ipv4.conf.default.accept_redirects = 0
+net.ipv4.conf.all.secure_redirects = 0
+net.ipv4.conf.default.secure_redirects = 0
+
+# Accept asymmetrically routed (outgoing routes and incoming routes are different) packets
+net.ipv4.conf.all.rp_filter = 1
+net.ipv4.conf.default.rp_filter = 1
+
+### Increase Process Identifiers Limit (PID) ###
+kernel.pid_max=65536
+vm.min_free_kbytes = 1048576
+#### BEGIN ADDED BY OPP INSTALLATION ####
+vm.overcommit_memory = 1
+net.core.somaxconn = 512
+net.ipv4.icmp_echo_ignore_all = 0
+#### END ADDED BY OPP INSTALLATION ####
+
