--- a/install.txt
+++ b/install.txt
@@ -1152,3 +1152,20 @@ net.core.somaxconn = 512
 net.ipv4.icmp_echo_ignore_all = 0
 #### END ADDED BY OPP INSTALLATION ####
 
+----
+3. 连接的“四元组”原理虽然一个 IP 只有约 6.5 万个端口，但这并不意味着服务器只能建立 6.5 万个连接。
+网络连接是由 四元组 (Four-tuple) 唯一确定的：{源IP, 源端口, 目的IP, 目的端口}只要目的地（目的 IP 或 目的端口）不同，同一个本地源端口是可以复用的。
+但是，如果你是连接到同一个目标（比如连接到同一个 Redis 实例），那么本地端口就成了限制并发数的唯一瓶颈。
+4. 配合参数建议仅仅修改端口范围有时还不够。当连接关闭后，端口会进入 TIME_WAIT 状态，默认会锁定一段时间（通常是 60 秒）才能再次使用。
+为了更彻底地解决高并发下的端口问题，通常会配合以下参数：
+参数建议值作用
+net.ipv4.tcp_tw_reuse 1
+允许将处于 TIME_WAIT 状态的端口重新用于新的连接
+net.ipv4.tcp_fin_timeout 30
+缩短端口释放前的等待时间
+
+
+--
+数名称	默认值	调优常用值	核心目的
+tcp_tw_reuse	0	1	快速重用 TIME_WAIT 端口，解决连接满的问题
+tcp_fin_timeout	60	15 ~ 30	加快废弃连接的回收速度，节省系统内存
