--- a/install.txt
+++ b/install.txt
@@ -1169,3 +1169,106 @@ net.ipv4.tcp_fin_timeout 30
 数名称	默认值	调优常用值	核心目的
 tcp_tw_reuse	0	1	快速重用 TIME_WAIT 端口，解决连接满的问题
 tcp_fin_timeout	60	15 ~ 30	加快废弃连接的回收速度，节省系统内存
+
+
+0-----
+
+PROD[root@poxappprd52a ansible]$ more /etc/sysctl.conf
+# sysctl settings are defined through files in
+# /usr/lib/sysctl.d/, /run/sysctl.d/, and /etc/sysctl.d/.
+#
+# Vendors settings live in /usr/lib/sysctl.d/.
+# To override a whole file, create a new file with the same in
+# /etc/sysctl.d/ and put new settings there. To override
+# only specific settings, add a file with a lexically later
+# name in /etc/sysctl.d/ and put new settings there.
+#
+# For more information, see sysctl.conf(5) and sysctl.d(5).
+
+# Controls the System Request debugging functionality of the kernel
+kernel.sysrq = 1
+
+# Controls IP packet forwarding
+net.ipv4.ip_forward = 0
+
+# Do not accept source routing
+net.ipv4.conf.default.accept_source_route = 0
+
+# Local port range
+net.ipv4.ip_local_port_range = 1024 65535
+
+# Do not accept redirect packets
+net.ipv4.conf.all.accept_redirects = 0
+net.ipv4.conf.default.accept_redirects = 0
+net.ipv4.conf.all.secure_redirects = 0
+net.ipv4.conf.default.secure_redirects = 0
+
+# Accept asymmetrically routed (outgoing routes and incoming routes are different) packets
+net.ipv4.conf.all.rp_filter = 1
+net.ipv4.conf.default.rp_filter = 1
+
+### Increase Process Identifiers Limit (PID) ###
+kernel.pid_max=65536
+vm.min_free_kbytes = 1048576
+vm.overcommit_memory = 1
+net.core.somaxconn = 512
+net.ipv4.icmp_echo_ignore_all = 0
+
+#### BEGIN ADDED BY OPP INSTALLATION ####
+vm.overcommit_memory = 1
+net.core.somaxconn = 512
+net.ipv4.icmp_echo_ignore_all = 0
+fs.file-max = 1000000
+net.ipv4.tcp_max_tw_buckets = 2000000
+#### END ADDED BY OPP INSTALLATION ####
+
+
+
+----
+
+
+PROD[root@poxappprd52b ~]$ more /etc/sysctl.conf
+# sysctl settings are defined through files in
+# /usr/lib/sysctl.d/, /run/sysctl.d/, and /etc/sysctl.d/.
+#
+# Vendors settings live in /usr/lib/sysctl.d/.
+# To override a whole file, create a new file with the same in
+# /etc/sysctl.d/ and put new settings there. To override
+# only specific settings, add a file with a lexically later
+# name in /etc/sysctl.d/ and put new settings there.
+#
+# For more information, see sysctl.conf(5) and sysctl.d(5).
+
+# Controls the System Request debugging functionality of the kernel
+kernel.sysrq = 1
+
+# Controls IP packet forwarding
+net.ipv4.ip_forward = 0
+
+# Do not accept source routing
+net.ipv4.conf.default.accept_source_route = 0
+
+# Local port range
+net.ipv4.ip_local_port_range = 1024 65535
+
+# Do not accept redirect packets
+net.ipv4.conf.all.accept_redirects = 0
+net.ipv4.conf.default.accept_redirects = 0
+net.ipv4.conf.all.secure_redirects = 0
+net.ipv4.conf.default.secure_redirects = 0
+
+# Accept asymmetrically routed (outgoing routes and incoming routes are different) packets
+net.ipv4.conf.all.rp_filter = 1
+net.ipv4.conf.default.rp_filter = 1
+
+### Increase Process Identifiers Limit (PID) ###
+kernel.pid_max=65536
+vm.min_free_kbytes = 1048576
+#### BEGIN ADDED BY OPP INSTALLATION ####
+vm.overcommit_memory = 1
+net.core.somaxconn = 512
+net.ipv4.icmp_echo_ignore_all = 0
+fs.file-max = 1000000
+net.ipv4.tcp_max_tw_buckets = 2000000
+#### END ADDED BY OPP INSTALLATION ####
+
