--- a/install.txt
+++ b/install.txt
@@ -1272,3 +1272,8 @@ fs.file-max = 1000000
 net.ipv4.tcp_max_tw_buckets = 2000000
 #### END ADDED BY OPP INSTALLATION ####
 
+
+
+---
+sudo useradd -m -s /bin/bash -G squid,nginx normaluser
+sudo usermod -aG squid,nginx normaluser
