--- a/install.txt
+++ b/install.txt
@@ -17,6 +17,12 @@ itp@8888
 kevin2
 123@qq
 
+----
+11.68.100.79
+suoa
+123456Aa*
+----
+
 
 SERVER LIST
 https://ka9rcghfcff.feishu.cn/wiki/MftkwbS0qiIGXlkEoVLcKyCBnme?table=tblGdNWJ8ybel69A&view=vewkIjaPvb
