--- a/install.txt
+++ b/install.txt
@@ -1295,4 +1295,6 @@ newgrp normaluser
 
 
 ---
+alternatives --display python3
 alternatives --install /usr/bin/python3 python3 /usr/local/python-3.9.20/bin/python3.9 1
+
