--- a/install.txt
+++ b/install.txt
@@ -575,7 +575,7 @@ pip3 install --upgrade pip
 chmod -R a+rx /usr/local/lib/python3.6
 sudo -u squid /bin/python3 -c "import redis; print(redis.__version__)"
 
-
+sudo -u squid python3 -c "import redis; print(redis.__file__)"
 ---
 /etc/cron.d/opp-crontab
 
