--- a/todo.txt
+++ b/todo.txt
@@ -26,4 +26,8 @@
 ### fix logrote issue
 ### run ansible-playbook as logreader
 ### Ansible Vault
+### sudo 
+### nginx ALL=(root) NOPASSWD: /usr/bin/python3 *
+# 只允许运行 /opt/py_prod/ 目录下的任何 python 脚本
+###nginx ALL=(root) NOPASSWD: /usr/bin/python3 /opt/py_prod/*
 ##############
