--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 ##############
 ### TODO
-### !!!!!!  check opp squid reload  !!!!!!
-### !!!!!!  check opp other sudo command  !!!!!!
-### logrotate -d /opt/logrotate/etc/squid
-### /opt/logrotate/status/logrotate.status
-### /var/spool/cron/logreader
+### check opp squid reload OK
+### check opp other sudo command OK
+### logrotate -d /opt/logrotate/etc/squid OK 
+### /opt/logrotate/status/logrotate.status OK
+### /var/spool/cron/logreader OK
 ### upgrade python to 3.9.20 OK
 ### upgrade pip to 3.9.20 OK
 ### upgrade pip module to 3.9.20
@@ -35,3 +35,20 @@
 ###   /usr/nginx/html/threat/archive/
 ###
 ##############
+
+--
+logreader ALL=(ALL) NOPASSWD:  
+/bin/systemctl stop redis, 
+/bin/systemctl start redis, 
+/bin/systemctl reload squid, 
+/usr/bin/cp -f /opt/redis_bak/dump.rdb_release* /opt/redis/dump.rdb, 
+/usr/bin/rm -f /opt/redis/dump.rdb, 
+/usr/bin/chown -R redis.redis /opt/redis/dump.rdb,
+/usr/bin/journalctl -u redis,
+/usr/bin/journalctl -u squid,
+/usr/bin/journalctl -u redis -n 100 --no-pager, 
+/usr/bin/journalctl -u squid -n 100 --no-pager, 
+/usr/bin/rsync -a /usr/nginx/html/transproxy_admin/public/fileData/ /opt/fileData_bak/*/,
+/usr/bin/rsync -a --no-delay-updates --inplace --ignore-times /opt/txt_release/*/ 
+/usr/nginx/html/transproxy_admin/public/fileData/,
+/usr/bin/chown -R squid.squid /usr/nginx/html/transproxy_admin/public/fileData
