--- a/todo.txt
+++ b/todo.txt
@@ -35,6 +35,11 @@
 ###   /usr/nginx/html/threat/archive/
 ### 30 3 * * * /usr/bin/find /var/crash -maxdepth 1 -name 'squid.*.core.*' -mtime +1 -print -delete
 ###
+###  cancel cache log truncate
+###  deply 52a to 52b,52c,52d,52e
+###  fix website
+###  netstat
+###
 ##############
 
 --
