--- a/install.txt
+++ b/install.txt
@@ -1454,5 +1454,5 @@ ip netns exec default sysctl net.ipv4.ip_local_port_range
 
 netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {print $5}' | sort | uniq -c | sort -rn
 
-
+netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {print $5}' | sort -u
 
