--- a/install.txt
+++ b/install.txt
@@ -1456,3 +1456,5 @@ netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {print $5}' | sort | uniq -c | sort
 
 netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {print $5}' | sort -u
 
+netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {count[$5]++} END {for (addr in count) print count[addr], addr}'
+
