--- a/install.txt
+++ b/install.txt
@@ -1458,5 +1458,5 @@ netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {print $5}' | sort -u
 
 netstat -na | awk 'NR>2 && $5 != "0.0.0.0:*" {count[$5]++} END {for (addr in count) print count[addr], addr}'
 
-
+netstat -ant | awk 'NR>2 {count[$4" "$5]++} END {for (c in count) print count[c], c}' | sort -rn | head -10
 
