--- a/install.txt
+++ b/install.txt
@@ -1493,4 +1493,83 @@ ss -ant | awk 'NR>1 && $5 !~ /^\*:/ && $5 !~ /^127\./ && $5 !~ /^:::/ {print $1"
 
 ss -ant | awk 'NR>1 {split($4, a, ":"); if (a[2] != 8080) count++} END {print count}'
 
+----
+
+State      Recv-Q Send-Q   Local Address:Port     Peer Address:Port Process
+LISTEN     0      128            0.0.0.0:22            0.0.0.0:*
+LISTEN     0      100          127.0.0.1:25            0.0.0.0:*
+LISTEN     0      511            0.0.0.0:443           0.0.0.0:*
+LISTEN     0      511            0.0.0.0:8000          0.0.0.0:*
+LISTEN     0      25             0.0.0.0:514           0.0.0.0:*
+LISTEN     0      511            0.0.0.0:6379          0.0.0.0:*
+LISTEN     0      65535          0.0.0.0:9100          0.0.0.0:*
+LISTEN     0      128            0.0.0.0:111           0.0.0.0:*
+LISTEN     0      65535          0.0.0.0:8080          0.0.0.0:*
+LISTEN     0      511            0.0.0.0:80            0.0.0.0:*
+ESTAB      0      0      192.168.152.101:47460     4.145.79.80:443
+ESTAB      0      0      192.168.152.101:8080      160.1.75.39:51893
+TIME-WAIT  0      0      192.168.152.101:12354  20.190.144.139:443
+TIME-WAIT  0      0      192.168.152.101:8080     160.74.18.24:50124
+ESTAB      0      0            127.0.0.1:51916       127.0.0.1:6379
+ESTAB      0      0            127.0.0.1:32033       127.0.0.1:36390
+TIME-WAIT  0      0      192.168.152.101:25980   64.236.28.130:443
+ESTAB      0      0      192.168.152.101:8080      160.7.20.11:50627
+ESTAB      0      0            127.0.0.1:6379        127.0.0.1:38666
+ESTAB      0      0      192.168.152.101:25632 142.250.198.110:443
+ESTAB      0      0            127.0.0.1:29678       127.0.0.1:6379
+ESTAB      0      0            127.0.0.1:6379        127.0.0.1:51704
+ESTAB      0      0      192.168.152.101:58622  142.250.71.170:443
+ESTAB      0      0      192.168.152.101:8080     160.1.49.131:56288
+ESTAB      0      0      192.168.152.101:8080     160.42.39.66:52902
+ESTAB      0      0      192.168.152.101:8080      160.42.64.5:50059
+ESTAB      0      0      192.168.152.101:8080     160.7.43.160:61776
+ESTAB      0      0      192.168.152.101:8080     160.5.41.155:50256
+TIME-WAIT  0      0      192.168.152.101:5996    64.236.28.130:443
+ESTAB      0      0      192.168.152.101:61370  142.250.71.131:443
+ESTAB      0      0      192.168.152.101:8080       160.5.90.6:60250
+ESTAB      0      0            127.0.0.1:6379        127.0.0.1:40982
+TIME-WAIT  0      0      192.168.152.101:8080    160.34.98.128:51632
+ESTAB      0      0            127.0.0.1:58434       127.0.0.1:41655
+TIME-WAIT  0      0      192.168.152.101:51518 172.183.192.109:443
+ESTAB      0      0      192.168.152.101:8080     160.1.39.113:54633
+TIME-WAIT  0      0      192.168.152.101:35428  51.132.193.104:443
+ESTAB      0      0      192.168.152.101:8080     160.8.187.30:63778
+TIME-WAIT  0      0      192.168.152.101:27140    20.44.10.123:443
+ESTAB      0      0            127.0.0.1:40976       127.0.0.1:23659
+ESTAB      0      0            127.0.0.1:6379        127.0.0.1:42084
+ESTAB      0      0            127.0.0.1:47636       127.0.0.1:6379
+ESTAB      0      0      192.168.152.101:24400     4.145.79.81:443
+ESTAB      0      0      192.168.152.101:8080     160.34.98.11:63688
+ESTAB      0      0      192.168.152.101:8080    160.12.90.100:54639
+TIME-WAIT  0      0      192.168.152.101:32298  142.250.71.131:443
+ESTAB      0      0            127.0.0.1:6756        127.0.0.1:48359
+ESTAB      0      0      192.168.152.101:8080     160.29.97.89:62468
+ESTAB      0      0            127.0.0.1:6379        127.0.0.1:49596
+ESTAB      0      0      192.168.152.101:61752  108.177.97.188:5228
+ESTAB      0      0            127.0.0.1:54186       127.0.0.1:6379
+ESTAB      0      0      192.168.152.101:8080    160.42.29.113:58435
+ESTAB      0      0      192.168.152.101:8080    160.29.26.148:51965
+ESTAB      0      0      192.168.152.101:12946  20.190.148.165:443
+ESTAB      0      0            127.0.0.1:8994        127.0.0.1:22209
+TIME-WAIT  0      0      192.168.152.101:62730    52.179.73.34:443
+ESTAB      0      0            127.0.0.1:35394       127.0.0.1:15579
+TIME-WAIT  0      0      192.168.152.101:51260     20.42.73.27:443
+ESTAB      0      0            127.0.0.1:33770       127.0.0.1:6379
+ESTAB      0      0      192.168.152.101:8080      160.7.89.73:49392
+ESTAB      0      0            127.0.0.1:51926       127.0.0.1:12485
+ESTAB      0      0      192.168.152.101:40274   34.107.243.93:443
+ESTAB      0      0      192.168.152.101:8080      160.7.97.83:52877
+TIME-WAIT  0      0      192.168.152.101:4556  142.250.198.170:443
+ESTAB      0      0      192.168.152.101:8080     160.29.90.54:62468
+ESTAB      0      0            127.0.0.1:55956       127.0.0.1:40955
+ESTAB      0      0      192.168.152.101:8080      160.7.20.11:50697
+ESTAB      0      0      192.168.152.101:56078  74.125.204.188:5228
+ESTAB      0      0      192.168.152.101:8080     160.29.93.13:63349
+ESTAB      0      0            127.0.0.1:49311       127.0.0.1:43606
+ESTAB      0      0      192.168.152.101:8080      160.1.42.93:54718
+TIME-WAIT  0      0      192.168.152.101:8080     160.7.72.154:49620
+ESTAB      0      0      192.168.152.101:46376     4.145.79.80:443
+TIME-WAIT  0      0      192.168.152.101:3866   142.250.199.74:443
+ESTAB      0      0      192.168.152.101:29788  142.250.198.99:443
+ESTAB      0      0      192.168.152.101:50434    52.70.125.53:443
 
