--- a/install.txt
+++ b/install.txt
@@ -1574,8 +1574,6 @@ ESTAB      0      0      192.168.152.101:29788  142.250.198.99:443
 ESTAB      0      0      192.168.152.101:50434    52.70.125.53:443
 
 --
-ss -ant | awk '$5 ~ /:8080$/ && $1 != "LISTEN" {split($6,arr,":"); ip=arr[1]; count[ip]++} END {for(ip in count) print count[ip], ip}' | sort -rn
-
 
 ss -ant | awk '
 $1 == "ESTAB" && $4 ~ /:8080$/ {
@@ -1600,5 +1598,5 @@ END {
     for (ip in count) {
         print ip ": " count[ip]
     }
-}' | sort -t: -k2 -nr
+}' | sort -t: -k2 -n
 
