--- a/install.txt
+++ b/install.txt
@@ -1638,3 +1638,9 @@ ss -ant | grep -v "LISTEN" | awk 'NR>1 && $4 !~ /:8080$/ && match($4, /:([0-9]+)
 
 --
 https://downloads.isc.org/isc/bind9/9.17.15/BIND9.17.15.x64.zip
+
+
+--
+openssl s_client -connect 4.145.79.80:443 -servername anydomain.com 2>/dev/null | openssl x509 -noout -text | grep -A1 "Subject Alternative Name"
+
+
