--- a/install.txt
+++ b/install.txt
@@ -1643,8 +1643,8 @@ https://downloads.isc.org/isc/bind9/9.17.15/BIND9.17.15.x64.zip
 --
 openssl s_client -connect 4.145.79.80:443 -servername anydomain.com 2>/dev/null | openssl x509 -noout -text | grep -A1 "Subject Alternative Name"
 
-grep "squid.hk/index.html" /opt/squid/var/log/access.log | awk '{print $3}' | sort | uniq -c | sort -nr
-
+grep "squid.hk/index.html" /opt/squid/var/log/access.log | awk '{print $3}' | sort | uniq -c | sort -n
+tail -50000 /opt/squid/var/log/access.log | grep "squid.hk/index.html" | awk '{print $3}' | sort | uniq -c | sort -n
 
 
 
