--- a/install.txt
+++ b/install.txt
@@ -33,7 +33,8 @@ https://ka9rcghfcff.feishu.cn/wiki/MftkwbS0qiIGXlkEoVLcKyCBnme?table=tblKZj0TQ9X
 check list
 https://ka9rcghfcff.feishu.cn/wiki/EPyHwemmKiBgmdkgKDlc3lLInOf?sheet=0GAPui
 
-
+服务器状态
+https://ka9rcghfcff.feishu.cn/drive/folder/Qzd3fkfOsl2eOwdRbP2cKFtDn3f
 
 
 
@@ -1324,6 +1325,7 @@ alternatives --display python3
 alternatives --install /usr/bin/python3 python3 /usr/local/python-3.9.20/bin/python3.9 1
 alternatives --display python3
 
+alternatives --set python3 /usr/local/python-3.9.20/bin/python3.9
 
 ---
 # 注册新版 pip3
