--- a/install.txt
+++ b/install.txt
@@ -1688,6 +1688,22 @@ sysctl -w net.ipv4.tcp_keepalive_time=30
 sysctl -w net.ipv4.tcp_keepalive_probes=5
 sysctl -w net.ipv4.tcp_keepalive_intvl=3
 
+---
+
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
+2026/01/27 17:02:49 kid10| helperOpenServers: Starting 0/100 'python3' processes
+2026/01/27 17:02:49 kid10| helperOpenServers: No 'python3' processes needed.
 
 
 
